fix spacing for multiple images (responsive)

--- a/public/typo3conf/ext/fx_templates_jungerkammerchor/Resources/Public/StyleSheet/custom.less
+++ b/public/typo3conf/ext/fx_templates_jungerkammerchor/Resources/Public/StyleSheet/custom.less
@@ -294,5 +294,8 @@ p {
 .ce-column {
   + .ce-column {
     margin-top:15px;
+    @media(min-width:768px) {
+      margin-top:0;
+    }
   }
 }
